tests/expression/function_uncallable_type.sy
start :: fn do
    f := fn i: int do
        i()
    end
    f
end
// error: $Violating(Type::Int)
